--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,7 @@
     <ImageView
         android:id="@+id/TakenImage"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:background="@color/purple_200" />
+        android:layout_height="500dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,13 +30,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="50dp"
-            android:text="Retry" />
+            android:text="Take Photo" />
 
         <Button
             android:id="@+id/TranslateButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Translate" />
+            android:text="Translate Current" />
 
     </LinearLayout>
 
