--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
     <ImageView
         android:id="@+id/TakenImage"
         android:layout_width="match_parent"
-        android:layout_height="500dp" />
+        android:layout_height="500dp"
+        android:src="@drawable/noimage" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,14 +30,15 @@
             android:id="@+id/RetryButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="50dp"
+            android:layout_margin="30dp"
             android:text="Take Photo" />
 
         <Button
             android:id="@+id/TranslateButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Translate Current" />
+            android:text="Translate"
+            android:visibility="gone" />
 
     </LinearLayout>
 
