Added tint to the translation flag. Modified the title of the language selection dialog.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,8 @@
             android:layout_alignEnd="@id/TitleText"
             android:layout_marginEnd="20dp"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/flag">
+            android:src="@drawable/flag"
+            android:tint="#404040">
 
         </ImageView>
 
