Switched from android:tint to app:tint to remove error/warning.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -29,7 +30,7 @@
             android:layout_marginEnd="20dp"
             android:contentDescription="@string/app_name"
             android:src="@drawable/flag"
-            android:tint="#404040">
+            app:tint="#404040">
 
         </ImageView>
 
