--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,35 +36,25 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="500dp">
+        android:layout_height="500dp"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/TakenImage"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/MainTabLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@android:color/transparent"
+            app:tabMode="scrollable" />
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/MainPager"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
-            android:contentDescription="@string/app_name"
-            android:scaleType="center"
-            android:src="@drawable/noimage" />
+            android:layout_height="match_parent" />
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/TranslatedText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:gravity="center"
-                android:padding="30dp"
-                android:text="@string/text_placeholder"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:visibility="gone" />
-        </ScrollView>
-    </RelativeLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
