--- a/app/src/main/res/layout/fragment_taken_photo.xml
+++ b/app/src/main/res/layout/fragment_taken_photo.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".TakenPictureFragment">
+    tools:context=".TakenPhotoFragment">
 
     <ImageView
         android:id="@+id/TakenImage"
