Added a text placeholder for the user taken photo. Changed from ImageView to PhotoView so the photo taken by the user can be interacted with.

--- a/app/src/main/res/layout/fragment_taken_photo.xml
+++ b/app/src/main/res/layout/fragment_taken_photo.xml
@@ -7,12 +7,23 @@
     android:orientation="vertical"
     tools:context=".TakenPhotoFragment">
 
-    <ImageView
-        android:id="@+id/TakenImage"
+    <TextView
+        android:id="@+id/UserPhotoPlaceholder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif"
+        android:gravity="center"
+        android:padding="30dp"
+        android:text="@string/user_photo_text_placeholder"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:visibility="visible" />
+
+    <com.github.chrisbanes.photoview.PhotoView
+        android:id="@+id/TakenPhoto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@string/app_name"
-        android:scaleType="center"
-        android:src="@drawable/noimage" />
+        android:scaleType="fitCenter"
+        android:visibility="gone" />
 
 </LinearLayout>
