--- a/app/src/main/res/layout/fragment_translated_text.xml
+++ b/app/src/main/res/layout/fragment_translated_text.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context=".TranslatedTextFragment">
 
@@ -14,6 +15,7 @@
             android:id="@+id/TranslatedText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:fontFamily="sans-serif"
             android:gravity="center"
             android:padding="30dp"
