Fixed the translated text not showing correctly if the text is too large.

--- a/app/src/main/res/layout/fragment_translated_text.xml
+++ b/app/src/main/res/layout/fragment_translated_text.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
     tools:context=".TranslatedTextFragment">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/TranslatedText"
@@ -23,6 +22,7 @@
             android:textColor="@color/black"
             android:textSize="20sp"
             android:visibility="visible" />
-    </ScrollView>
+    </LinearLayout>
 
-</LinearLayout>
+
+</ScrollView>
