There is a known issue with PhotoView library when used inside ViewGroups (such as ViewPager) which makes it throw an uncaught exception. So to fix this problem a "hacky" ViewPager has been created which catches this exception.
For more info on this issue: https://github.com/Baseflow/PhotoView#issues-with-viewgroups

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,8 @@
                 android:background="@android:color/transparent"
                 app:tabMode="scrollable" />
 
-            <androidx.viewpager.widget.ViewPager
+            <es.fdi.tmi.viewfood.HackyProblematicViewPager
+
                 android:id="@+id/MainPager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
